--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta tags -->
     <meta charset="utf-8" />
+    <meta name="robots" content="index" />
+    <meta name="author" content="Julio Vásquez" />
+    <meta name="theme-color" content="#33C8A3" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
+    <meta httpEquiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta 
+      name="keywords" 
+      content="React.js, boilterplate, react, reactjs boilterplate, reach-router" 
+      data-rh="true" 
+    />
+    <meta 
       name="description"
-      content="Web site created using create-react-app with typescript"
+      content="React.js Simple and clean Boilerplate, SEO Ready with TypeScript | 
+        Reactjs plantilla limpia, organizada y optimizada para SEO con TypeScript"
+      data-rh="true" 
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <!-- Og tags -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="React.js Boilerplate - Template TypeScript" />
+  <meta 
+    property="og:url" 
+    content="https://github.com/Julio-Vasquez/react-boilerplate-template" 
+  />
+  <meta property="og:image" content="https://i.ibb.co/86d2Xjg/reactluminoso.png" />
+  <meta 
+    property="og:description"
+    content="React.js Simple and clean Boilerplate, SEO Ready with TypeScript | 
+    Reactjs plantilla limpia, organizada y optimizada para SEO con TypeScript" 
+  />
+  <!-- IOS Meta -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="B4A - Conecta" />
+  <link rel="apple-touch-icon" href="./img/icons/icon-96.png" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:url" content="pendiente" />
+  <meta name="twitter:title" content="React.js Boilerplate - TypeScript" />
+  <meta name="twitter:image" content="https://i.ibb.co/86d2Xjg/reactluminoso.png" />
+  <meta 
+    name="twitter:description"
+    content="React.js Simple and clean Boilerplate, SEO Ready with TypeScript| 
+    Reactjs plantilla limpia, organizada y optimizada para SEO con TypeScript" 
+  />
+  <!-- Google Analytics -->
+  <link rel="preconnect dns-prefetch" href="https://www.googletagmanager.com" />
+  <link rel="preconnect dns-prefetch" href="https://www.google-analytics.com" />
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "WebSite",
+        "name": "Boilerplate",
+        "url": "",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "app/home{search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
     <title>React App - Template ts</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Necesita habilitar JavaScript para ejecutar esta aplicación.</noscript>
     <div id="root"></div>
   </body>
 </html>
